<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                tools:context=".MainActivityFragment">

    <TextView
        android:id="@+id/widget_count"
        android:text="@string/zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/add_widget_button"
        android:text="@string/add_widget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/destroy_database_button"
        android:text="@string/destroy_database"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/build_database_button"
        android:text="@string/build_database"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/reboot_app_button"
        android:text="@string/reboot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Switch
        android:id="@+id/use_reflection_hack_switch"
        android:textOn="Enabled"
        android:textOff="Disabled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>
